# disperseNN2

./: .gitignore  .readthedocs.yaml  README.md  check_params.py  data_generation.py  data_generation_dev_oneSigma.py  data_generation_dev_twoChannel.py  disperseNN2.py  disperseNN2_dev_oneSigma.py  disperseNN2_dev_oneSigma_cutTape.py  disperseNN2_dev_oneSigma_v2.py  disperseNN2_dev_twoChannel.py  disperseNN2_dev_twoChannel_v2.py  disperseNN2_vignette.ipynb  preprocess.sh  process_input.py  process_input_dev_twoChannel.py  pyproject.toml  read_input.py  read_input_dev_twoChannel.py  run.sh  setup.py  train_job.sh
Empirical/: subset_vcf.py
Examples/: target_list1.txt
Examples/Preprocessed/: empirical_67890.txt  pretrained_model.hdf5
Examples/Preprocessed/Genos/1/: 0.genos.npy  11.genos.npy  14.genos.npy  16.genos.npy  18.genos.npy  21.genos.npy  23.genos.npy  30.genos.npy  32.genos.npy  37.genos.npy  5.genos.npy  56.genos.npy  57.genos.npy  59.genos.npy  63.genos.npy  66.genos.npy  68.genos.npy  83.genos.npy  85.genos.npy  92.genos.npy  95.genos.npy  96.genos.npy  97.genos.npy
Examples/Preprocessed/Locs/1/: 14.locs.npy  18.locs.npy  19.locs.npy  21.locs.npy  28.locs.npy  29.locs.npy  30.locs.npy  31.locs.npy  33.locs.npy  37.locs.npy  39.locs.npy  42.locs.npy  58.locs.npy  59.locs.npy  62.locs.npy  68.locs.npy  71.locs.npy  77.locs.npy  79.locs.npy  81.locs.npy  88.locs.npy  91.locs.npy  94.locs.npy  98.locs.npy
Examples/Preprocessed/Maps/1/: 0.target.npy  14.target.npy  20.target.npy  28.target.npy  30.target.npy  32.target.npy  39.target.npy  42.target.npy  48.target.npy  49.target.npy  61.target.npy  65.target.npy  66.target.npy  70.target.npy  74.target.npy  79.target.npy  88.target.npy  93.target.npy  95.target.npy
Examples/Preprocessed/Test/: predictions_67890.txt
Examples/Preprocessed/Test/Genos/1/: 101.genos.npy  102.genos.npy  103.genos.npy  104.genos.npy  106.genos.npy  109.genos.npy
Examples/Preprocessed/Test/Genos/12345/: 16.genos.npy  4.genos.npy  (+4 more)
Examples/Preprocessed/Train/: disperseNN2_12345_model.hdf5  disperseNN2_67890_model.hdf5  mean_sd.npy  training_params.npy
Examples/TreeSeqs/: target_98180132.txt  target_98217910.txt  target_99284440.txt  target_99739498.txt
Examples/VCFs/: halibut.locs  iraptus.vcf
SLiM_recipes/: bat20.slim  square.slim
disperseNN2/: check_params.py  data_generation.py  disperseNN2  disperseNN2.py  process_input.py
disperseNN2/Empirical/: subset_vcf.py
disperseNN2/Examples/Preprocessed/Test/: predictions_67890.txt
disperseNN2/Examples/TreeSeqs/: target_99290585.txt
disperseNN2/Examples/VCFs/: iraptus_meta_full.txt
disperseNN2/dispersenn2/: data_generation.py
disperseNN2/docs/source/: conf.py  development.rst  usage.rst  vignette.rst
dispersenn2/: check_params.py  disperseNN2.py
docs/: disperseNN2_vignette.ipynb
docs/source/: api.rst  conf.py  development.rst  gpus.rst  index.rst  snakemake.rst  usage.rst  vignette.rst
poetry/disperseNN2/: README.md  pyproject.toml
poetry/disperseNN2/dispersenn2/: process_input.py  read_input.py
requirements/: development.txt
(+552 files in other folders)
