[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "disperseNN2"
version = "2.0.5"
# authors = [
#   { name="Example Author", email="author@example.com" },
# ]
# description = "A small example package"
# readme = "README.md"
# requires-python = ">=3.7"
# classifiers = [
#     "Programming Language :: Python :: 3",
#     "License :: OSI Approved :: MIT License",
#     "Operating System :: OS Independent",
# ]

# [project.urls]
# "Homepage" = "https://github.com/pypa/sampleproject"
# "Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

