[build-system]
requires = ["setuptools==65.3.0"] # this version is required! newer versions break it
build-backend = "setuptools.build_meta"

# [project]
# name = "disperseNN2"
# version = "4.0.4"
# requires-python = "==3.9.*"
# dependencies = ["setuptools==65.3.0",
# 	        "gpustat",
# ]
# authors = [
#   { name="Example Author", email="author@example.com" },
# ]
# description = "A small example package"
# readme = "README"
# requires-python = ">=3.7"
# classifiers = [
#     "Programming Language :: Python :: 3",
#     "License :: OSI Approved :: MIT License",
#     "Operating System :: OS Independent",
# ]
# dynamic= ["license"]

# [project.urls]
# "Homepage" = "https://github.com/pypa/sampleproject"
# "Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
