[tool.poetry]
name = "disperseNN2"
version = "0.0.1"
description = "Neural net for estimating dispersal distance"
authors = ["chriscrsmith <chriscs@uoregon.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
gpustat = "^1.1"
numpy = "^1.25.1"
geopy = "^2.3.0"
attrs = "^23.1.0"
scikit-learn = "^1.3.0"
msprime = "^1.2.0"
tskit = "^0.5.5"
utm = "^0.7.0"
matplotlib = "^3.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
disperseNN2 = 'dispersenn2.disperseNN2:run'
